src/DesmosPlusParser.js
// Generated from DesmosPlusParser.g4 by ANTLR 4.9.1
// jshint ignore: start
import antlr4 from 'antlr4';
import DesmosPlusParserVisitor from './DesmosPlusParserVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class DesmosPlusParser extends antlr4.Parser {

    static grammarFileName = "DesmosPlusParser.g4";
    static literalNames = [ null, null, "'...'", null, "'let'", "'def'", 
                            "'note'", "'const'", "'show'", "'parametric'", 
                            "'simulation'", "'table'", "'folder'", "'type'", 
                            null, null, "'('", "')'", "'['", "']'", "'{'", 
                            "'}'", "':'", "'::'", "','", "';'", "'.'", "'$'", 
                            "'?'", "'@{'", "'='", "'<-'", "'+'", "'-'", 
                            "'*'", "'/'", "'%'", "'^'", "'>='", "'>'", "'<='", 
                            "'<'", "'=='", "'!='", "'not'", "'and'", "'or'" ];
    static symbolicNames = [ null, "NumberLiteral", "Ellipsis", "StringLiteral", 
                             "Let", "Def", "Note", "Const", "Show", "Parametric", 
                             "Simulation", "Table", "Folder", "Type", "SingleLineComment", 
                             "Whitespace", "OpenParen", "CloseParen", "OpenBracket", 
                             "CloseBracket", "OpenBrace", "CloseBrace", 
                             "Colon", "DoubleColon", "Comma", "Semicolon", 
                             "Dot", "DollarSign", "QuestionMark", "ObjectOpen", 
                             "Define", "Assign", "Add", "Subtract", "Multiply", 
                             "Divide", "Modulus", "Power", "GreaterThanOrEqual", 
                             "GreaterThan", "LessThanOrEqual", "LessThan", 
                             "Equals", "NotEquals", "Not", "And", "Or", 
                             "Identifier" ];
    static ruleNames = [ "program", "folderStatement", "nestableStatement", 
                         "assignment", "assignmentList", "tableLine", "optionalMetadata", 
                         "mathExpr", "functionArguments", "functionDefinitionPart", 
                         "functionDefinitionArguments", "variableReference", 
                         "identifier", "literal", "numberLiteral", "stringLiteral", 
                         "listLiteral", "pointLiteral", "rangeListLiteral", 
                         "intervalLiteral", "piecewiseBranch", "objectBranch", 
                         "objectInside", "objectLiteral" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = DesmosPlusParser.ruleNames;
        this.literalNames = DesmosPlusParser.literalNames;
        this.symbolicNames = DesmosPlusParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 7:
    	    		return this.mathExpr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    mathExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 10);
    		case 1:
    			return this.precpred(this._ctx, 9);
    		case 2:
    			return this.precpred(this._ctx, 8);
    		case 3:
    			return this.precpred(this._ctx, 7);
    		case 4:
    			return this.precpred(this._ctx, 6);
    		case 5:
    			return this.precpred(this._ctx, 5);
    		case 6:
    			return this.precpred(this._ctx, 16);
    		case 7:
    			return this.precpred(this._ctx, 15);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, DesmosPlusParser.RULE_program);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DesmosPlusParser.Let) | (1 << DesmosPlusParser.Def) | (1 << DesmosPlusParser.Note) | (1 << DesmosPlusParser.Const) | (1 << DesmosPlusParser.Show) | (1 << DesmosPlusParser.Parametric) | (1 << DesmosPlusParser.Simulation) | (1 << DesmosPlusParser.Table) | (1 << DesmosPlusParser.Folder) | (1 << DesmosPlusParser.Type))) !== 0)) {
	            this.state = 50;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case DesmosPlusParser.Let:
	            case DesmosPlusParser.Def:
	            case DesmosPlusParser.Note:
	            case DesmosPlusParser.Const:
	            case DesmosPlusParser.Show:
	            case DesmosPlusParser.Parametric:
	            case DesmosPlusParser.Simulation:
	            case DesmosPlusParser.Table:
	            case DesmosPlusParser.Type:
	                this.state = 48;
	                this.nestableStatement();
	                break;
	            case DesmosPlusParser.Folder:
	                this.state = 49;
	                this.folderStatement();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 54;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	folderStatement() {
	    let localctx = new FolderStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, DesmosPlusParser.RULE_folderStatement);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this.match(DesmosPlusParser.Folder);
	        this.state = 56;
	        localctx.name = this.mathExpr(0);
	        this.state = 57;
	        this.optionalMetadata();
	        this.state = 58;
	        this.match(DesmosPlusParser.Comma);
	        this.state = 59;
	        this.match(DesmosPlusParser.OpenBracket);
	        this.state = 63;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DesmosPlusParser.Let) | (1 << DesmosPlusParser.Def) | (1 << DesmosPlusParser.Note) | (1 << DesmosPlusParser.Const) | (1 << DesmosPlusParser.Show) | (1 << DesmosPlusParser.Parametric) | (1 << DesmosPlusParser.Simulation) | (1 << DesmosPlusParser.Table) | (1 << DesmosPlusParser.Type))) !== 0)) {
	            this.state = 60;
	            this.nestableStatement();
	            this.state = 65;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 66;
	        this.match(DesmosPlusParser.CloseBracket);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nestableStatement() {
	    let localctx = new NestableStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, DesmosPlusParser.RULE_nestableStatement);
	    var _la = 0; // Token type
	    try {
	        this.state = 125;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case DesmosPlusParser.Let:
	            localctx = new LetStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 68;
	            this.match(DesmosPlusParser.Let);
	            this.state = 69;
	            this.identifier();
	            this.state = 70;
	            this.match(DesmosPlusParser.Define);
	            this.state = 71;
	            this.mathExpr(0);
	            this.state = 72;
	            this.optionalMetadata();
	            break;
	        case DesmosPlusParser.Const:
	            localctx = new ConstStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 74;
	            this.match(DesmosPlusParser.Const);
	            this.state = 75;
	            this.identifier();
	            this.state = 76;
	            this.match(DesmosPlusParser.Define);
	            this.state = 77;
	            this.mathExpr(0);
	            break;
	        case DesmosPlusParser.Def:
	            localctx = new DefStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 79;
	            this.match(DesmosPlusParser.Def);
	            this.state = 80;
	            this.identifier();
	            this.state = 81;
	            this.functionDefinitionArguments();
	            this.state = 82;
	            this.match(DesmosPlusParser.Define);
	            this.state = 83;
	            this.mathExpr(0);
	            break;
	        case DesmosPlusParser.Note:
	            localctx = new NoteStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 85;
	            this.match(DesmosPlusParser.Note);
	            this.state = 86;
	            this.mathExpr(0);
	            break;
	        case DesmosPlusParser.Show:
	            localctx = new ShowStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 87;
	            this.match(DesmosPlusParser.Show);
	            this.state = 88;
	            this.mathExpr(0);
	            this.state = 89;
	            this.optionalMetadata();
	            break;
	        case DesmosPlusParser.Parametric:
	            localctx = new ParametricStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 91;
	            this.match(DesmosPlusParser.Parametric);
	            this.state = 92;
	            this.mathExpr(0);
	            this.state = 93;
	            this.match(DesmosPlusParser.Comma);
	            this.state = 94;
	            this.assignment();
	            this.state = 95;
	            this.optionalMetadata();
	            break;
	        case DesmosPlusParser.Simulation:
	            localctx = new SimulationStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 7);
	            this.state = 97;
	            this.match(DesmosPlusParser.Simulation);
	            this.state = 98;
	            localctx.fps = this.mathExpr(0);
	            this.state = 99;
	            this.match(DesmosPlusParser.Comma);
	            this.state = 100;
	            this.assignmentList();
	            break;
	        case DesmosPlusParser.Table:
	            localctx = new TableStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 8);
	            this.state = 102;
	            this.match(DesmosPlusParser.Table);
	            this.state = 104;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	            if(la_===1) {
	                this.state = 103;
	                localctx.xlist = this.mathExpr(0);

	            }
	            this.state = 106;
	            this.match(DesmosPlusParser.OpenBracket);
	            this.state = 112;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 107;
	                    this.tableLine();
	                    this.state = 108;
	                    this.match(DesmosPlusParser.Semicolon); 
	                }
	                this.state = 114;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	            }

	            this.state = 116;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DesmosPlusParser.NumberLiteral) | (1 << DesmosPlusParser.StringLiteral) | (1 << DesmosPlusParser.OpenParen) | (1 << DesmosPlusParser.OpenBracket) | (1 << DesmosPlusParser.OpenBrace) | (1 << DesmosPlusParser.ObjectOpen))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (DesmosPlusParser.Add - 32)) | (1 << (DesmosPlusParser.Subtract - 32)) | (1 << (DesmosPlusParser.Not - 32)) | (1 << (DesmosPlusParser.Identifier - 32)))) !== 0)) {
	                this.state = 115;
	                this.tableLine();
	            }

	            this.state = 118;
	            this.match(DesmosPlusParser.CloseBracket);
	            break;
	        case DesmosPlusParser.Type:
	            localctx = new TypeDeclarationStatementContext(this, localctx);
	            this.enterOuterAlt(localctx, 9);
	            this.state = 119;
	            this.match(DesmosPlusParser.Type);
	            this.state = 120;
	            localctx.name = this.identifier();
	            this.state = 121;
	            this.match(DesmosPlusParser.ObjectOpen);
	            this.state = 122;
	            this.objectInside();
	            this.state = 123;
	            this.match(DesmosPlusParser.CloseBrace);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, DesmosPlusParser.RULE_assignment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.variableReference();
	        this.state = 128;
	        this.match(DesmosPlusParser.Assign);
	        this.state = 129;
	        this.mathExpr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignmentList() {
	    let localctx = new AssignmentListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, DesmosPlusParser.RULE_assignmentList);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(DesmosPlusParser.OpenBracket);
	        this.state = 137;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 132;
	                this.assignment();
	                this.state = 133;
	                this.match(DesmosPlusParser.Comma); 
	            }
	            this.state = 139;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	        this.state = 141;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===DesmosPlusParser.DollarSign) {
	            this.state = 140;
	            this.assignment();
	        }

	        this.state = 143;
	        this.match(DesmosPlusParser.CloseBracket);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tableLine() {
	    let localctx = new TableLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, DesmosPlusParser.RULE_tableLine);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 145;
	        this.mathExpr(0);
	        this.state = 146;
	        this.optionalMetadata();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	optionalMetadata() {
	    let localctx = new OptionalMetadataContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, DesmosPlusParser.RULE_optionalMetadata);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 150;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        if(la_===1) {
	            this.state = 148;
	            this.match(DesmosPlusParser.Comma);
	            this.state = 149;
	            this.mathExpr(0);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	mathExpr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new MathExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 14;
	    this.enterRecursionRule(localctx, 14, DesmosPlusParser.RULE_mathExpr, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 182;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new FunctionExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 153;
	            this.identifier();
	            this.state = 154;
	            this.functionArguments();
	            break;

	        case 2:
	            localctx = new UnaryPlusExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 156;
	            localctx.op = this.match(DesmosPlusParser.Add);
	            this.state = 157;
	            this.mathExpr(13);
	            break;

	        case 3:
	            localctx = new UnaryMinusExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 158;
	            localctx.op = this.match(DesmosPlusParser.Subtract);
	            this.state = 159;
	            this.mathExpr(12);
	            break;

	        case 4:
	            localctx = new NotExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 160;
	            localctx.op = this.match(DesmosPlusParser.Not);
	            this.state = 161;
	            this.mathExpr(11);
	            break;

	        case 5:
	            localctx = new VariableExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 162;
	            this.identifier();
	            break;

	        case 6:
	            localctx = new LiteralExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 163;
	            this.literal();
	            break;

	        case 7:
	            localctx = new PiecewiseExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 164;
	            this.match(DesmosPlusParser.OpenBrace);
	            this.state = 165;
	            this.piecewiseBranch();
	            this.state = 170;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 166;
	                    this.match(DesmosPlusParser.Comma);
	                    this.state = 167;
	                    this.piecewiseBranch(); 
	                }
	                this.state = 172;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	            }

	            this.state = 174;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===DesmosPlusParser.Comma) {
	                this.state = 173;
	                this.match(DesmosPlusParser.Comma);
	            }

	            this.state = 176;
	            this.match(DesmosPlusParser.CloseBrace);
	            break;

	        case 8:
	            localctx = new ParenthesizedExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 178;
	            this.match(DesmosPlusParser.OpenParen);
	            this.state = 179;
	            this.mathExpr(0);
	            this.state = 180;
	            this.match(DesmosPlusParser.CloseParen);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 212;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 210;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new PowerExpressionContext(this, new MathExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DesmosPlusParser.RULE_mathExpr);
	                    this.state = 184;
	                    if (!( this.precpred(this._ctx, 10))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
	                    }
	                    this.state = 185;
	                    this.match(DesmosPlusParser.Power);
	                    this.state = 186;
	                    this.mathExpr(10);
	                    break;

	                case 2:
	                    localctx = new MultiplicativeExpressionContext(this, new MathExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DesmosPlusParser.RULE_mathExpr);
	                    this.state = 187;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 188;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(((((_la - 34)) & ~0x1f) == 0 && ((1 << (_la - 34)) & ((1 << (DesmosPlusParser.Multiply - 34)) | (1 << (DesmosPlusParser.Divide - 34)) | (1 << (DesmosPlusParser.Modulus - 34)))) !== 0))) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 189;
	                    this.mathExpr(10);
	                    break;

	                case 3:
	                    localctx = new AdditiveExpressionContext(this, new MathExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DesmosPlusParser.RULE_mathExpr);
	                    this.state = 190;
	                    if (!( this.precpred(this._ctx, 8))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
	                    }
	                    this.state = 191;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===DesmosPlusParser.Add || _la===DesmosPlusParser.Subtract)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 192;
	                    this.mathExpr(9);
	                    break;

	                case 4:
	                    localctx = new ComparisonChainExpressionContext(this, new MathExprContext(this, _parentctx, _parentState));
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, DesmosPlusParser.RULE_mathExpr);
	                    this.state = 193;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 194;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(((((_la - 38)) & ~0x1f) == 0 && ((1 << (_la - 38)) & ((1 << (DesmosPlusParser.GreaterThanOrEqual - 38)) | (1 << (DesmosPlusParser.GreaterThan - 38)) | (1 << (DesmosPlusParser.LessThanOrEqual - 38)) | (1 << (DesmosPlusParser.LessThan - 38)) | (1 << (DesmosPlusParser.Equals - 38)) | (1 << (DesmosPlusParser.NotEquals - 38)))) !== 0))) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 195;
	                    localctx.right = this.mathExpr(8);
	                    break;

	                case 5:
	                    localctx = new AndExpressionContext(this, new MathExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DesmosPlusParser.RULE_mathExpr);
	                    this.state = 196;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 197;
	                    this.match(DesmosPlusParser.And);
	                    this.state = 198;
	                    this.mathExpr(7);
	                    break;

	                case 6:
	                    localctx = new OrExpressionContext(this, new MathExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DesmosPlusParser.RULE_mathExpr);
	                    this.state = 199;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 200;
	                    this.match(DesmosPlusParser.Or);
	                    this.state = 201;
	                    this.mathExpr(6);
	                    break;

	                case 7:
	                    localctx = new ObjectAccessExpressionContext(this, new MathExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DesmosPlusParser.RULE_mathExpr);
	                    this.state = 202;
	                    if (!( this.precpred(this._ctx, 16))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 16)");
	                    }
	                    this.state = 203;
	                    this.match(DesmosPlusParser.Dot);
	                    this.state = 204;
	                    this.identifier();
	                    break;

	                case 8:
	                    localctx = new ListIndexExpressionContext(this, new MathExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DesmosPlusParser.RULE_mathExpr);
	                    this.state = 205;
	                    if (!( this.precpred(this._ctx, 15))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 15)");
	                    }
	                    this.state = 206;
	                    this.match(DesmosPlusParser.OpenBracket);
	                    this.state = 207;
	                    this.mathExpr(0);
	                    this.state = 208;
	                    this.match(DesmosPlusParser.CloseBracket);
	                    break;

	                } 
	            }
	            this.state = 214;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	functionArguments() {
	    let localctx = new FunctionArgumentsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, DesmosPlusParser.RULE_functionArguments);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this.match(DesmosPlusParser.OpenParen);
	        this.state = 221;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 216;
	                this.mathExpr(0);
	                this.state = 217;
	                this.match(DesmosPlusParser.Comma); 
	            }
	            this.state = 223;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	        }

	        this.state = 224;
	        this.mathExpr(0);
	        this.state = 225;
	        this.match(DesmosPlusParser.CloseParen);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


